[gd_scene load_steps=17 format=3 uid="uid://egb0qrfm4whr"]

[ext_resource type="Script" uid="uid://pwyb4tkhknpr" path="res://scenes/ui/skill_tree/skill_tree_node.gd" id="1_rsfar"]
[ext_resource type="Texture2D" uid="uid://ddqldaj2il0vw" path="res://assets/ui/theme_stuff/skill_tree_node_button_border.png" id="1_t1fc7"]
[ext_resource type="Texture2D" uid="uid://cs6mb57ps3rcw" path="res://assets/ui/theme_stuff/focus.png" id="2_conxx"]
[ext_resource type="Texture2D" uid="uid://ke0xb4ooudh6" path="res://assets/ui/upgrade_icons/reinforced_plating.png" id="3_vapcf"]
[ext_resource type="Texture2D" uid="uid://irx3c5py2uvx" path="res://assets/ui/tungesten_icon.png" id="5_k6xxr"]
[ext_resource type="Texture2D" uid="uid://djch8rn21j0fq" path="res://assets/ui/glow.png" id="5_vapcf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t1fc7"]
texture = ExtResource("1_t1fc7")
modulate_color = Color(0.9, 0.9, 0.9, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k6xxr"]
texture = ExtResource("1_t1fc7")
modulate_color = Color(0.9, 0.828, 0.71999997, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_conxx"]
texture = ExtResource("1_t1fc7")
modulate_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vapcf"]
texture = ExtResource("1_t1fc7")
modulate_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lkqbj"]
texture = ExtResource("2_conxx")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rsfar"]
color = Color(0.66, 0.52844, 0.3564, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k6xxr"]
color = Color(0.65882355, 0.5294118, 0.35686275, 1)
grow_begin = 6.0
grow_end = 4.0
thickness = 2
vertical = true

[sub_resource type="Animation" id="Animation_k6xxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vapcf"]
resource_name = "new_animation"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8.4, 20.266666),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, 1.0471975511965976, -2.0943951023931953]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k6xxr"]
_data = {
&"RESET": SubResource("Animation_k6xxr"),
&"new_animation": SubResource("Animation_vapcf")
}

[node name="SkillTreeNode" type="Button"]
custom_minimum_size = Vector2(94, 94)
offset_right = 94.0
offset_bottom = 94.0
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_t1fc7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k6xxr")
theme_override_styles/hover = SubResource("StyleBoxTexture_conxx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_vapcf")
theme_override_styles/focus = SubResource("StyleBoxTexture_lkqbj")
icon = ExtResource("3_vapcf")
icon_alignment = 1
script = ExtResource("1_rsfar")
associated_upgrade_name = "reinforced_plating"

[node name="InfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
show_behind_parent = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 101.0
offset_right = 109.0
offset_bottom = 233.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "name"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_rsfar")

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="LevelReq" type="Label" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.51, 0.8448334, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.04666669, 0.14, 1)
theme_override_constants/outline_size = 6
text = "Lv: 1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_k6xxr")

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "COST"

[node name="TextureRect" type="TextureRect" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_k6xxr")

[node name="Cost" type="Label" parent="InfoPanel/VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.71, 0.71, 0.71, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "1234"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_rsfar")

[node name="Description" type="RichTextLabel" parent="InfoPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "Lorem ipsum [color=red] dolor sit [/color] ametsadfñasñldkfjñasdlfjñsdlkajfñaslkdjf
"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Glow" type="TextureRect" parent="."]
modulate = Color(1, 0.99233335, 0.77, 0.30980393)
show_behind_parent = true
z_index = -10
layout_mode = 0
offset_left = -5.0
offset_top = -2.0
offset_right = 95.0
offset_bottom = 98.0
scale = Vector2(0.675, 0.675)
pivot_offset = Vector2(50, 50)
texture = ExtResource("5_vapcf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k6xxr")
}
autoplay = "new_animation"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
